--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vuex-map-fields-with-dispatch",
+  "name": "@azaraliyev/vuex-map-fields",
   "version": "1.4.0",
   "description": "Enable two-way data binding for form fields saved in a Vuex store",
   "keywords": [
