--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@azaraliyev/vuex-map-fields",
-  "version": "1.4.0",
+  "version": "1.0.0",
   "description": "Enable two-way data binding for form fields saved in a Vuex store",
   "keywords": [
     "vue",
@@ -51,10 +51,10 @@
   "module": "dist/index.esm.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/maoberlehner/vuex-map-fields"
+    "url": "https://github.com/azal-io/vuex-map-fields.git"
   },
   "bugs": {
-    "url": "https://github.com/maoberlehner/vuex-map-fields/issues"
+    "url": "https://github.com/azal-io/vuex-map-fields/issues"
   },
   "browserslist": [
     "> 0.5%",
