--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@azaraliyev/vuex-map-fields",
+  "name": "@azaraliyev/vmf",
   "version": "1.0.0",
   "description": "Enable two-way data binding for form fields saved in a Vuex store",
   "keywords": [
